--- a/tasks/create_vm.yml
+++ b/tasks/create_vm.yml
@@ -161,15 +161,12 @@
       headers: "{{proxmox_auth_headers}}"
       body_format: form-urlencoded
     register: info
-    until: '"QEMU guest agent is not running" not in info.msg'
-    retries: 10
+    until: not info.failed and info.json.data.result | json_query(_query_no_loopback_addresses) | json_query(_query_ipv4_addresses) | default([]) | list | length > 0
+    retries: 20
     delay: 6
   - name: Retrieve IPv4 address
     set_fact:
-      vm_ipv4: "{{ info.json.data.result | map(attribute='ip-addresses') | flatten | selectattr('ip-address-type', 'equalto', 'ipv4') | map(attribute='ip-address') | reject('match','127.0.0.1') | first | default(omit) }}"
-    until: vm_ipv4 is defined
-    retries: 5
-    delay: 6
+      vm_ipv4: "{{ info.json.data.result | json_query(_query_no_loopback_addresses) | json_query(_query_ipv4_addresses) | first }}"
   tags:
   - start_vm
 
